crates/plotnik-lib/tests/03-analyze/anchors/boundary_anchors_both_ends.txt
Q = {. (a) .}
==== diagnostics ====
error: boundary anchor requires parent node context
 --> query.ptk:1:6
  |
1 | Q = {. (a) .}
  |      ^
  |
help: wrap in a named node: `(parent . (child))`

error: boundary anchor requires parent node context
 --> query.ptk:1:12
  |
1 | Q = {. (a) .}
  |            ^
  |
help: wrap in a named node: `(parent . (child))`
==== symbols ====
Q
